--- a/index.html
+++ b/index.html
@@ -22,16 +22,14 @@
     <title>Work Day Scheduler</title>
     <div class="media">
         <img class="align-self-end mr-3" src="..." alt="Generic placeholder image">
-        <div class="header">
-          <h5 class="mt-0">Bottom-aligned media</h5>
-          <p>Current Date and Time is <span id='date-time'></span>.</p>
+          <h5 class="mt-0"></h5>
+          <p><span id='date-time'></span>.</p>
           <script>
             var dt = new Date();
              document.getElementById('date-time').innerHTML=dt;
             </script>
-          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisqu</p>
-          <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare</p>
-        </div>
+          <p>Please fill out the required fields to submit job info.</p>
+          <p class="mb-0">If we work together, this should all go as planned......</p>
       </div>
   </head>
 
