redoing the javascript to create elements

--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
         <div class="submit" id = "inputData">
             <input class="btn btn-primary" type="submit" value="Submit">
         </div>
-    
-
+        
+        <script src="./assets/moment.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
