working on creating the projectForm once values are input

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="form-group">
           <label for="dueDate">Project Due Date</label>
-          <input type="date" class="form-control" id="dueDate" placeholder="calendar">
+          <input type="time" class="form-control" id="dueDate" placeholder="calendar">
         </div>
         <div class="submit" id = "inputData">
             <input class="btn btn-primary" type="submit" value="Submit">
