--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <form id="projectForm">
+      <form name = "projectForm" id="projectForm">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="projectName">What is the name of your project</label>
@@ -60,9 +60,13 @@
         </div>
         <div class="submit" id = "inputData">
             <input class="btn btn-primary" type="submit" value="Submit">
-        </div>
-        
-        <script src="./assets/moment.js"></script>
+        </div><div><span class=""></span></div>
+      </form>
+      <section class="row" id="userInput">
+      </section>
+
+        <script src="assets/moment.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
